added all top tabs

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                         <a class="nav-link" href="#" id="courseCategory">Course Categories <i class="fa fa-angle-down"></i></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Course Type <i class="fa fa-angle-down"></i></a>
+                        <a class="nav-link" href="#" id="courseType">Course Type <i class="fa fa-angle-down"></i></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Career Guide <i class="fa fa-angle-down"></i></a>
+                        <a class="nav-link" href="#" id="Career">Career Guide <i class="fa fa-angle-down"></i></a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
             </div>
         </nav>
         <div class="navbar-extention" style="position: fixed;width:100%;">
-            <div class="wrap-div pt-2 pl-2 pr-2 d-flex flex-row justify-content-center align-items-center text-center flex-wrap">
+            <div class="wrap-div categories pt-2 pl-2 pr-2 d-flex flex-row justify-content-center align-items-center text-center flex-wrap">
                 <div class="p-3 flex-1 mr-1 bb-green">
                     <i class="fa fa-laptop fa-3x"></i>
                     <p class="text-center p-0 m-0">IT</p>
@@ -98,8 +98,89 @@
                     <p class="text-center p-0 m-0">All Categories</p>
                 </div>
             </div>
+             <div class="wrap-div coursetype pt-2 pl-2 pr-2 d-flex flex-row justify-content-center align-items-center text-center flex-wrap">
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-mortar-board fa-3x"></i>
+                    <p class="text-center p-0 m-0">Certificate Courses</p>
+                </div>
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-bookmark fa-3x"></i>
+                    <p class="text-center p-0 m-0">Diploma Courses</p>
+                </div>
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-exchange fa-3x"></i>
+                    <p class="text-center p-0 m-0">Learning Paths</p>
+                </div>
+            </div>
         </div>
-        
+        <div class="navbar-extention" style="position: fixed;width:100%;">
+            <div class="wrap-div categories pt-2 pl-2 pr-2 d-flex flex-row justify-content-center align-items-center text-center flex-wrap">
+                <div class="p-3 flex-1 mr-1 bb-green">
+                    <i class="fa fa-laptop fa-3x"></i>
+                    <p class="text-center p-0 m-0">IT</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-blue">
+                    <i class="fa fa-language fa-3x"></i>
+                    <p class="text-center p-0 m-0">Language</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-lightgreen">
+                    <i class="fa fa-flask fa-3x"></i>
+                    <p class="text-center p-0 m-0">Science</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-red">
+                    <i class="fa fa-heartbeat fa-3x"></i>
+                    <p class="text-center p-0 m-0">Health</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-black">
+                    <i class="fa fa-grav fa-3x"></i>
+                    <p class="text-center p-0 m-0">Humanities</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-purple">
+                    <i class="fa fa-briefcase fa-3x"></i>
+                    <p class="text-center p-0 m-0">Business</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-orange">
+                    <i class="fa fa-puzzle-piece fa-3x"></i>
+                    <p class="text-center p-0 m-0">Math</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-red">
+                    <i class="fa fa-bullseye fa-3x"></i>
+                    <p class="text-center p-0 m-0">Marketing</p>
+                </div>
+                <div class="p-3 flex-1 mr-1 bb-green">
+                    <i class="fa fa-bicycle fa-3x"></i>
+                    <p class="text-center p-0 m-0">Lifestyle</p>
+                </div>
+                <div class="p-3 flex-1 bb-blue">
+                    <i class="fa fa-sitemap fa-3x"></i>
+                    <p class="text-center p-0 m-0">All Categories</p>
+                </div>
+            </div>
+             <div class="wrap-div coursetype pt-2 pl-2 pr-2 d-flex flex-row justify-content-center align-items-center text-center flex-wrap">
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-mortar-board fa-3x"></i>
+                    <p class="text-center p-0 m-0">Certificate Courses</p>
+                </div>
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-bookmark fa-3x"></i>
+                    <p class="text-center p-0 m-0">Diploma Courses</p>
+                </div>
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-exchange fa-3x"></i>
+                    <p class="text-center p-0 m-0">Learning Paths</p>
+                </div>
+            </div>
+            <div class="wrap-div career pt-2 pl-2 pr-2 d-flex flex-row justify-content-center align-items-center text-center flex-wrap">
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-suitcase fa-2x"></i>
+                    <p class="text-center p-0 m-0">Get Career Skill & Guidance</p>
+                </div>
+                <div class="p-3  mr-1 bb-blue">
+                    <i class="fa fa-search fa-2x"></i>
+                    <p class="text-center p-0 m-0">Find Courses for Specific Jobs</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script
@@ -121,6 +202,22 @@ $(function () {
     $("#courseCategory").click(function (e) { 
         e.preventDefault();
         $(".navbar-extention").slideToggle();
+        $(".navbar-extention div.wrap-div").addClass("hidden")
+        $(".navbar-extention .categories").removeClass("hidden")
+        $(this).children("i").toggleClass("fa-angle-down fa-angle-up")
+    });
+    $("#courseType").click(function (e) { 
+        e.preventDefault();
+        $(".navbar-extention").slideToggle();
+        $(".navbar-extention div.wrap-div").addClass("hidden")
+        $(".navbar-extention .coursetype").removeClass("hidden")
+        $(this).children("i").toggleClass("fa-angle-down fa-angle-up")
+    });
+    $("#Career").click(function (e) { 
+        e.preventDefault();
+        $(".navbar-extention").slideToggle();
+        $(".navbar-extention div.wrap-div").addClass("hidden")
+        $(".navbar-extention .career").removeClass("hidden")
         $(this).children("i").toggleClass("fa-angle-down fa-angle-up")
     });
 });
